@@ -1229,6 +1229,7 @@ PANOPTICON_SYSCONFIG_LBL_SUBHEAD_SITE_INFO="Collecting Site Information"
 PANOPTICON_SYSCONFIG_LBL_SUBHEAD_UPTIME="Uptime Monitoring"
 PANOPTICON_SYSCONFIG_LBL_SUBHEAD_SYSTEM="System Preferences"
 PANOPTICON_SYSCONFIG_LBL_SUBHEAD_LOGINFAIL="Automatic IP blocking"
+PANOPTICON_SYSCONFIG_LBL_SUBHEAD_PASSWORD_SECURITY="Password Security"
 PANOPTICON_SYSCONFIG_NO_EXTENSIONS_HEAD="No extensions found"
 PANOPTICON_SYSCONFIG_NO_EXTENSIONS_BODY="Set up your sites and wait until their extension update information refreshes - up to 15 minutes later. You will then see all of their installed extensions here."
 PANOPTICON_SYSCONFIG_LBL_FIELD_LIVE_SITE="Panopticon URL"
@@ -1242,6 +1243,8 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_LOGIN_FAILURE_WINDOW="Login failure window"
 PANOPTICON_SYSCONFIG_LBL_FIELD_LOGIN_LOCKOUT="IP block time"
 PANOPTICON_SYSCONFIG_LBL_FIELD_LOGIN_LOCKOUT_EXTEND="Extend IP lockout time"
 PANOPTICON_SYSCONFIG_LBL_FIELD_LOGIN_LOCKOUT_EXTEND_HELP="When enabled, every time a blocked IP address tries to access Akeeba Panopticon it will have its lockout time reset, i.e. the lockout will be extended for another “IP lockout time” seconds. This penalises some bots, but it comes at the expense of slowing down legitimate access to Akeeba Panopticon."
+PANOPTICON_SYSCONFIG_LBL_FIELD_PASSWORD_HIBP="Forbid using leaked passwords"
+PANOPTICON_SYSCONFIG_LBL_FIELD_PASSWORD_HIBP_HELP="Prevent users from using passwords which are found in online password leaks. Powered by the third party service <a href='https://haveibeenpwned.com/' _target='blank'>Have I Been Pwned</a>."
 PANOPTICON_SYSCONFIG_LBL_FIELD_STATS_COLLECTION="Anonymous Usage Statistics Collection"
 PANOPTICON_SYSCONFIG_LBL_FIELD_STATS_COLLECTION_HELP="Akeeba Panopticon collects anonymous information about the Panopticon, PHP, and database server version. This aggregated information allows Akeeba to determine which versions of PHP and database servers to support in future releases."
 PANOPTICON_SYSCONFIG_LBL_FIELD_STATS_COLLECTION_HELP_LEARN_MORE="Details of the information collected."
@@ -2067,3 +2070,4 @@ PANOPTICON_SYSERROR_FORBIDDEN_TITLE="Access Denied"
 PANOPTICON_SYSERROR_FORBIDDEN_HEAD="Access Denied"
 PANOPTICON_SYSERROR_FORBIDDEN_INFO="Your IP address, <code>%s</code>, has been temporarily blocked due to suspicious behaviour."
 PANOPTICON_SYSERROR_FORBIDDEN_EXTENDING="Trying to accessing this site before the ban expires will extend the length of the ban."
+PANOPTICON_SYSERROR_LEAKED_PASSWORD="The password you are trying to use is present in online password leaks, making it very easy for hackers to guess this is what you are using. Please use a different password."
