@@ -8,6 +8,7 @@ Akeeba Panopticon 1.2.0
 + Batch processing sites
 + Control email sending for scheduled backups [gh-712]
 + Auto-ban IPs after many failed login attempts
++ Check passwords against HIBP [gh-728]
 ~ System Configuration uses more Show On tricks to show/hide relevant settings
 ~ Expose the Avatars setting in System Configuration [gh-729]
 # [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
